# Git

./: .gitattributes  R_Core_UnitTestScript.ps1  application.c  file1  func1.csv  safety_controller.elf  winAMS_Spmc.c
Demo_Build/Source/: safety_controller.h
Safety_control_withMAP_file/case_player/: case_player.arg  case_player.ini  case_player.rvc  case_player.vaccf  case_player.vcor  case_player.vetm  case_player.vopt  case_player.vproj  case_player.vstm  case_player_path.ini
Safety_control_withMAP_file/sst_manager/: ATDEditor.ini  CombRule.xml  TestHistory.ini  WinAMS.INI  WinAMSLite.INI  WinAMS_Start_Add_SS_STARTUP.txt  cov_log_file_ctrl.vdic  sst_manager.amsy
app/app1/: application.elf
app1/app1/: Makefile
calc_demo/cortex_r52_calc/: CMakeLists.txt  linker.ld  main.c  toolchain.cmake  vector.s  winAMS_SpmcDefine.h
cortex_r52_calc/cortex_r52_calc/: CMakeLists.txt  main.c
cortex_r52_calc/cortex_r52_calc/APP/src/: app.c
cortex_r52_calc/cortex_r52_calc/BSP/inc/: uart.h
cortex_r52_calc/cortex_r52_calc/BSP/src/: uart.c
cortex_r52_calc/cortex_r52_calc/SERVICES/inc/: calc_service.h
cortex_r52_calc/cortex_r52_calc/SERVICES/src/: calc_service.c
cortex_r52_demo1/: winams.ctrl
cortex_r52_demo1/demo/: ATDEditor.ini  ElemAnalAttrib.xml  SS_STARTUP.txt  TestCaseDisp.ini  TestHistory.ini  demo.aeat  demo.amsy  demo.auto  demo.ospl  winams.ctrl
cortex_r52_demo_elf/: README.md
demo/cortex_r52_calc/: CMakeLists.txt  (+5 more)
sample_app1/: Makefile
sonarqube/: R_core_unittest.txt  SonarQube_DE02_report.html
system_health_monitor/: linker.ld  main.c  vector.s
(+340 files in other folders)
